Currently played URL, all URLs in Options tab(fixes: qr does not fit on screen)

--- a/kladecytI/web/css/temp.css
+++ b/kladecytI/web/css/temp.css
@@ -24,19 +24,19 @@
 .temp-parse-button { position: absolute; top: 61px; background-color: #6796b4; color: white; }
 .temp-parse-button:hover { background-color: #7EA6BF; }
 .temp-textarea-parse-playlist-wrapper { position: absolute; width: 100%; top: 92px; bottom: 0px; }
-.temp-options-share-this-link { height: 232px; }
+.temp-options-share-this-link { height: 221px; }
 .temp-options-url-line { display: inline; text-align: center; position: absolute; width: 100%; line-height: 30px;}
 .temp-options-url-line>*:nth-child(1) { float: left; margin-left: 1%; width: 15%; }
 .temp-options-url-line>*:nth-child(2) { float: left; font-size: 13px; width: 65%; }
 .temp-options-url-line>*:nth-child(3) { margin-right: 1%; width: 15%; color: #6796b4; }
-.temp-options-fullurl-line { top: 48px; }
-.temp-options-long-line { top: 88px; }
-.temp-options-short-line { top: 128px; }
-.temp-options-fullurls-line { top: 168px; }
+.temp-options-fullurl-line { top: 43px; }
+.temp-options-long-line { top: 83px; }
+.temp-options-short-line { top: 123px; }
+.temp-options-fullurls-line { top: 163px; }
 .temp-options-fullurls-line textarea { resize: none; }
 .temp-panel.temp-options-go-mobile-wrapper { height : 320px; margin-top: 1px; background-color: #f7f7f7; }
 .temp-options-go-mobile { position: absolute; width: 100%; }
-.temp-alignQRCode { position: relative; top: 3px; }
+.temp-alignQRCode { position: relative; top: -2px; }
 .temp-panel.temp-options-tooltips-wrapper { height: 127px; margin-top: 1px; }
 .temp-options-tooltip { float: left; width: 50%; text-align: center; color: black; height: 30px; line-height: 30px; }
 .temp-options-tooltip * { margin: 0px!important; }
